--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean-css": "^2.0.6",
     "gulp-concat": "^2.6.0",
     "gulp-flatten": "^0.2.0",
     "gulp-imagemin": "^2.4.0",
-    "gulp-minify-css": "^1.2.4",
     "gulp-uglify": "^1.5.3",
     "imagemin-pngquant": "^4.2.2"
   }
